--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         	<div class="logo-content col-lg-4 col-md-6 logo-bg-red">
             	<h2>Team</h2>
-            	<p>Working On this single handedly will be looking for few partners in future if required. Will be happy if someone takes interest.</p>
+            	<p>Working On this single handedly will be looking for few partners in future if required. It would be great to collaborate if someone takes interest.</p>
             </div>
             <div class="logo-content col-lg-4 col-md-6 logo-bg-blue">
             	<h2>History</h2>
